Replace explicit loops with Stream API
And fix for style.